partial zad 2 commit